# figv-9

./: .gitignore
CMakeLists/Linux/: CMakeLists.txt
CMakeLists/MacOS/: CMakeLists.txt
CMakeLists/WIndows/: CMakeLists.txt
FIGV/: CMakeCache.txt  Makefile  cmake_install.cmake  imgui.ini
FIGV/resources/shaders/: FigvCartoonFragment.glsl  FigvCartoonVertex.glsl  FigvHemisphericLightingFragment.glsl  FigvHemisphericLightingVertex.glsl  FigvNormalFragment.glsl  FigvNormalVertex.glsl
FIGV/src/: Figv3DModel.cpp  Figv3DModel.h  FigvAuxiliaryFunctions.cpp  FigvAuxiliaryFunctions.h  FigvCamera.cpp  FigvCamera.h  FigvEventManager.cpp  FigvEventManager.h  FigvLightSource.cpp  FigvLightSource.h  FigvMaterial.cpp  FigvMaterial.h  FigvMesh.cpp  FigvMesh.h  FigvRenderer.cpp  FigvRenderer.h  FigvScene.cpp  FigvScene.h  FigvShader.cpp  FigvShader.h  FigvTexture.cpp  FigvTexture.h  FigvUserInterface.cpp  FigvUserInterface.h  FigvWindowSystem.cpp  FigvWindowSystem.h  main.cpp
